--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,4 +1,12 @@
 /*
-  Переменные для вашего проекта
-  и их переопределение под различные устройства
+  Переменные и их переопределение под различные устройства
 */
+
+:root {
+  --bg-color: #000028;
+  --text-color: #F1B2CE;
+  --heading-color: #DB00FF;
+  --accent-color: #FF0070;
+  --main-font: 'IBM Plex mono';
+  --main-font-size: 18px;
+}
