--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,12 +1,15 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #000028;
+  --text-color: #f1b2ce;
+  --heading-color: #db00ff;
+  --accent-color: #ff0070;
+  --title-decor-color: #000028;
+  --menu-button-color: #ff0070;
+  --content-title-color: #ff0070;
+  --menu-button-hover-color: rgba(255, 0, 112, 0.4);
+  --cover-image: url(../images/cover-image-dark.png);
+}
+
+.theme_dark .header__lamp {
+  display: block;
 }
