--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  min-inline-size: 375px;
+  min-inline-size: 355px;
   max-inline-size: 1440px;
   margin: 0 auto;
 }
@@ -35,6 +35,7 @@ picture {
 
 button,
 a {
+  text-decoration: none;
   color: currentColor;
   font-family: inherit;
   font-size: inherit;
