--- a/styles/light.css
+++ b/styles/light.css
@@ -1,12 +1,25 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #fff1f7;
+  --text-color: #353430;
+  --heading-color: #ffc2e6;
+  --accent-color: #ff8dcb;
+  --title-decor-color: #353430;
+  --menu-button-color: #353430;
+  --menu-button-hover-color: rgba(50, 49, 45, 0.4);
+  --content-title-color: #353430;
+  --cover-image: url(../images/cover-image-light.png);
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-color: #fff1f7;
+    --text-color: #353430;
+    --heading-color: #ffc2e6;
+    --accent-color: #ff8dcb;
+    --title-decor-color: #353430;
+    --menu-button-color: #353430;
+    --content-title-color: #353430;
+    --cover-image: url(../images/cover-image-light.png);
+    --menu-button-hover-color: rgba(50, 49, 45, 0.4);
+  }
 }
