--- a/styles/style.css
+++ b/styles/style.css
@@ -91,7 +91,7 @@
   right: -19px;
   border-radius: 50%;
   background-color: var(--accent-color);
-  filter: drop-shadow(0px 0px 4px var(--accent-color));
+  filter: drop-shadow(0 0 4px var(--accent-color));
   transform: translateY(-50%);
   inline-size: 9px;
   block-size: 9px;
@@ -284,6 +284,7 @@
 }
 
 @media (width > 425px) {
+
   .gallery__list {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(4, min-content);
@@ -297,6 +298,10 @@
 @media (width >= 768px) {
   .heading {
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
+  }
+
+  .header__title {
+    margin-inline-start: -20px;
   }
 
   .header__subtitle {
