Исправлено: ошибки отображение header__lamp, название классов для секций, дублирование классов, статичный размер header и footer.

--- a/styles/light.css
+++ b/styles/light.css
@@ -22,4 +22,12 @@
     --cover-image: url(../images/cover-image-light.png);
     --menu-button-hover-color: rgba(50, 49, 45, 0.4);
   }
+
+  .header__lamp {
+    display: none;
+  }
+}
+
+.page.theme_light .header__lamp {
+  display: none;
 }
